benchmark_api/k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: benchmark-api-postgres
  labels:
    app: benchmark-api-postgres
spec:
  selector:
    app: benchmark-api-postgres
  ports:
    - port: 5432

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: benchmark-api-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: benchmark-api-postgres
  template:
    metadata:
      labels:
        app: benchmark-api-postgres
    spec:
      containers:
        - name: benchmark-api-postgres
          image: postgres:14.2-alpine
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: 250m
              memory: 128Mi
